fixed firefox 3.0 display issue - flexlist buttons were displayed at the wrong position
git-svn-id: https://svn.code.sf.net/p/openuss/code/branches/openuss-plexus-3.1@4811 60046477-0c10-0410-bf4b-e552a4ff1768

--- a/themes/theme-plexus/src/main/webapp/css/buttons.css
+++ b/themes/theme-plexus/src/main/webapp/css/buttons.css
@@ -528,9 +528,8 @@ a.icon_recover span {
   font-size: 0pt;
   height: 16px;
   padding: 0 16px 0 0;
-  margin: 0 0 0 5px;
+  margin: 0 4px 0 5px;
   overflow: hidden;
-  position: relative;
   width: 16px;
   cursor: pointer;  
 }
